--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.wudsn.ide.tools</name>
+	<name>wudsn-ide-tools</name>
 	<comment></comment>
 	<projects>
 	</projects>
