Cleanup Altirra.ini

--- a/EMU/Altirra/Altirra.ini
+++ b/EMU/Altirra/Altirra.ini
@@ -35,6 +35,11 @@
 "File Viewer: View mode" = 2
 "Disk Explorer: Strict filenames" = 1
 "Disk Explorer: Adjust filenames" = 1
+"Display: Accelerate screen FX" = 1
+"Display: Use seamless custom refresh rate" = 0
+"Flash: Maxflash 8Mb flash mode" = ""
+"UI: Use dark theme" = 0
+"System: Force directory change polling" = 0
 
 [User\Software\virtualdub.org\Altirra\Window Placement]
 "Main window" = [42 02 00 00 CE 00 00 00 5F 07 00 00 DF 03 00 00 01 00 00 00 60 00 00 00]
@@ -341,6 +346,37 @@
 "ScreenFX: Bloom indirect intensity" = 10
 "ScreenFX: Distortion X View Angle" = 0
 "ScreenFX: Distortion Y Ratio" = 0
+"Cassette: Turbo decode mode" = "peakFilter"
+"Cassette: VBI avoidance enabled" = 0
+"Debugger: Auto-reload firmware" = 0
+"Debugger: Auto-load OS ROM symbols" = 0
+"Debugger: Auto-load system symbols" = 1
+"Debugger: Debug link enabled" = 0
+"Display: Auto-hide pointer" = 1
+"Display: Constrain pointer in full screen" = 0
+"Display: Show target pointer" = 1
+"View: Auto-hide menu" = 0
+"View: Alt output name" = ""
+"GTIA: Linear frame blending" = 1
+"GTIA: Monitor mode" = 0
+"ScreenFX: Enable HDR" = 0
+"ScreenFX: SDR intensity" = "200"
+"ScreenFX: HDR intensity" = "350"
+"ScreenFX: Use system SDR intensity" = 0
+"ScreenFX: Use system SDR intensity as HDR" = 0
+"Mouse: Use raw input API" = 0
+"Light Gun: Adjust X 2" = 0
+"Light Gun: Adjust Y 2" = 0
+"Light Pen: Adjust X 2" = 0
+"Light Pen: Adjust Y 2" = 0
+"Light Pen: Noise Mode" = "none"
+"Keyboard: Allow input map modifier overlap" = 1
+"Input: Allow immediate pot updates" = 0
+"Speed: VSync adaptive" = 0
+"Audio: Scope enabled" = 0
+"Audio: Speaker filter enabled" = 0
+"ExeLoader: Randomize launch delay" = 1
+"Keyboard: Custom Layout" = ]
 
 [User\Software\virtualdub.org\Altirra\Profiles\00000000\Colors]
 "Use separate color profiles" = 1
@@ -368,7 +404,7 @@
 "Intensity Scale" = 1065353216
 
 [User\Software\virtualdub.org\Altirra\Profiles\00000000\Colors\PAL]
-"Hue Start" = -1044905984
+"Hue Start" = -1044905983
 "Hue Range" = 1135624192
 "Brightness" = 0
 "Contrast" = 1065353216
@@ -405,44 +441,19 @@
 
 [User\Software\virtualdub.org\Altirra\Pane layouts 2]
 "Standard" = "{1*}"
-"Debugger" = "{1*},(4,0.4714:{2*}),(2,0.5224:{3,6*,4},(1,0.0000:{5*},(1,0.2224:{100*})))"
+"Debugger" = "{1*},(4,0.4714:{2*}),(2,0.6957:{3,6*,4},(1,0.1791:{5},(1,0.7774:{100*})))"
 
 [User\Software\virtualdub.org\Altirra\DialogDefaults]
 "DiscardMemory" = "ok"
 "ResetCartridgeChange" = "ok"
 "DiscardStorage" = "ok"
 
-[User\Software\virtualdub.org\Altirra\Saved filespecs]
-"6c6f6164" = "C:\\jac\\system\\Atari800\\Programming\\2021\\Fujiama\\MyDOS4.51\\MADS\\"
-"524f4d49" = "C:\\jac\\system\\Atari800\\Programming\\AtariRoms\\GBXL\\"
-"63617274" = "C:\\TEMP\\Low\\"
-"6469736b" = "C:\\jac\\system\\Atari800\\Programming\\Tools\\Fader\\"
-"7363726e" = "C:\\jac\\system\\Atari800\\Programming\\AtariRoms\\GBXL\\"
-"72766964" = "C:\\Users\\JAC\\Desktop\\"
-"63617373" = "C:\\Users\\JAC\\Downloads\\"
-"73726320" = "C:\\jac\\system\\Atari800\\Programming\\Games\\Tangram\\pas\\"
-"63617361" = "C:\\jac\\system\\Atari800\\Programming\\Demos\\BadAppleHD\\audio\\"
-
 [User\Software\virtualdub.org\Altirra\Firmware\Specific]
 "BASIC rev C" = "bf80754b86100d05"
 "OS-B" = "dfc00d9c9644a075"
 "XLOS rev 2" = "8cb77ff811c22c61"
 
-[User\Software\virtualdub.org\Altirra\MRU List]
-"A" = "C:\\jac\\system\\Atari800\\Programming\\2019\\Goonies\\HomeSoft\\GOONIES.xex"
-"Order" = "EDCBAJIHGF"
-"B" = "C:\\jac\\system\\Atari800\\Programming\\2019\\Goonies\\GAMES065.ATR"
-"C" = "C:\\Users\\JAC\\Desktop\\HATZ\\Turbo-Basic XL Versionen-aktuell\\TURBO16.ATR"
-"D" = "C:\\jac\\system\\Atari800\\Programming\\2019\\HATZ\\BUG65\\bug65-$9B00.xex"
-"E" = "C:\\jac\\system\\Atari800\\Harddisk\\H1\\Turbobasic.atr"
-"F" = "C:\\jac\\system\\Atari800\\Programming\\Demos\\SillyPack2k18\\atr\\fixes\\INTRO256\\TRUEMAZE\\TRUEMAZE.xex"
-"G" = "C:\\jac\\system\\Atari800\\Programming\\Demos\\SillyPack2k18\\atr\\fixes\\INTRO256\\TRUEMAZE\\maze256trueCIO.xex"
-"H" = "C:\\jac\\system\\Atari800\\Programming\\Demos\\SillyPack2k18\\atr\\fixes\\INTRO256\\TRUEMAZE\\CIO.xex"
-"I" = "C:\\Users\\JAC\\Downloads\\2048.xex"
-"J" = "C:\\jac\\system\\Atari800\\Programming\\2019\\Goonies\\Goonies (The).atx"
-
 [User\Software\virtualdub.org\Altirra\Device config history]
-"hostfs" = "{\"readonly\": false,\"lowercase\": false,\"fakedisk\": true,\"path1\": \"C:\\\\jac\\\\system\\\\Atari800\\\\Harddisk\\\\H1\\\\\"}"
 "vbxe" = "{\"alt_page\": false,\"version\": 126,\"shared_mem\": false}"
 "covox" = "{\"base\": 54784,\"channels\": 4}"
 
